# dml-simulation

./: README.md  pyproject.toml
dml_simulation/AIPW/: OLD_aipw.ipynb  backend_aipw.py  frontend_aipw.ipynb  plots2_aipw.ipynb  plots_aipw.ipynb  simulation_aipw.py
dml_simulation/AIPW/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
dml_simulation/AIPW/catboost_info/learn/: events.out.tfevents
results/: ClassConvert.py
results/Published/Dimensionality/: VaryingDIMfix.csv
results/Published/Sample_Size/: VaryingSAMP.csv
results/Published/Sparsity/: VaryingSPARS.csv
results/Tables/: VaryingDIMrel.csv  VaryingSAMP.csv  VaryingSPARS.csv
src/AIPW/: OLD_aipw.ipynb  backend_aipw.py  frontend_aipw.ipynb  middleend_aipw.ipynb
src/AIPW/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/AIPW/catboost_info/learn/: events.out.tfevents
src/ML/: backend_ml.py  frontend_ml.ipynb  plots_ml.ipynb  simulation_inference_ml_ALL.py  simulation_inference_ml_OLS.py  simulation_ml.py
src/OLS/: backend_ols.py  frontend_ols.ipynb  plots_ols.ipynb  simulation_ols.py
