[project]
name = "dml-simulation"
version = "0.1.0"
description = "Debiased Machine Learning with High-Dimensional Discrete Covariates"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Christian-Michael Ispas" }
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "matplotlib>=3.10",
    "seaborn>=0.13.2",
    "catboost>=1.2.10",
    "xgboost>=3.2.0",
    "celer>=0.7.4",
    "plotly>=6.5.2",
    "tqdm>=4.67.3",
    "joblib>=1.5.3"
]

# ===============================
# Optional: command-line interface
# ===============================

[project.scripts]
run-simulation = "simulation:main"

# ===============================
# Packaging configuration
# ===============================

[tool.setuptools.packages.find]
where = ["."]
include = ["dml_simulation*"]

# ===============================
# Build system (mandatory)
# ===============================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
